Document keyboard shortcuts

--- a/messenger.html
+++ b/messenger.html
@@ -90,13 +90,19 @@
 
       <p>
         How to use the bookmark:
-        <ol>
-          <li>Click the bookmark to open the full page.</li>
-          <li>Wait until the entire page is loaded.</li>
-          <li>Click the bookmark again.</li>
-          <li>Have fun!</li>
-        </ol>
       </p>
+
+      <ol>
+        <li>Click the bookmark to open the full page.</li>
+        <li>Wait until the entire page is loaded.</li>
+        <li>Click the bookmark again.</li>
+        <li>Have fun!</li>
+      </ol>
+
+      <ul>
+        <li>Ctrl-h to show and hide stickers.</li>
+        <li>Ctrl-j to grow and shrink the size of stickers.</li>
+      </ul>
     </div>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
