Change instructions to reflect previous commit

--- a/messenger.html
+++ b/messenger.html
@@ -106,7 +106,7 @@
       </ol>
 
       <ul>
-        <li>Ctrl-h to hide and show buddy list.</li>
+        <li>Ctrl-h to show and hide buddy list.</li>
         <li>Ctrl-j to grow and shrink the size of stickers.</li>
       </ul>
     </div>
