Add instructions for up and down arrows

--- a/messenger.html
+++ b/messenger.html
@@ -108,6 +108,7 @@
       <ul>
         <li>Ctrl-h to show and hide buddy list.</li>
         <li>Ctrl-j to grow and shrink the size of stickers.</li>
+        <li>Up and down arrows to switch between recent conversations.</li>
       </ul>
     </div>
 
